errorstofix.txt
cargo ui
   Compiling gcontinuity-gtk v0.1.0 (/home/smruti/linuxprojects/gcontinuity/gcontinuity-gtk)
error[E0432]: unresolved import `futures_lite`
 --> gcontinuity-gtk/src/dbus/mod.rs:2:5
  |
2 | use futures_lite::StreamExt;   // pulled in transitively by zbu...
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_lite`
  |
  = help: if you wanted to use a crate named `futures_lite`, use `cargo add futures_lite` to add it to your `Cargo.toml`

error[E0599]: no method named `next` found for struct `DeviceConnectedStream<'a>` in the current scope
  --> gcontinuity-gtk/src/dbus/mod.rs:87:45
   |
 8 | / #[proxy(
 9 | |     interface = "org.gcontinuity.Daemon1",
10 | |     default_service = "org.gcontinuity.Daemon",
11 | |     default_path = "/org/gcontinuity/Daemon"
12 | | )]
   | |__- method `next` not found for this struct
...
87 |               Some(signal) = connected_stream.next() => {
   |                                               ^^^^
   |
   = help: items from traits can only be used if the trait is in scope
help: the following traits which provide `next` are implemented but not in scope; perhaps you want to import one of them
   |
 1 + use futures_lite::stream::StreamExt;
   |
 1 + use futures_util::stream::stream::StreamExt;
   |
 1 + use ordered_stream::adapters::OrderedStreamExt;
   |
help: there is a method `try_next` with a similar name
   |
87 |             Some(signal) = connected_stream.try_next() => {
   |                                             ++++

error[E0599]: no method named `next` found for struct `DeviceDisconnectedStream<'a>` in the current scope
  --> gcontinuity-gtk/src/dbus/mod.rs:97:48
   |
 8 | / #[proxy(
 9 | |     interface = "org.gcontinuity.Daemon1",
10 | |     default_service = "org.gcontinuity.Daemon",
11 | |     default_path = "/org/gcontinuity/Daemon"
12 | | )]
   | |__- method `next` not found for this struct
...
97 |               Some(signal) = disconnected_stream.next() => {
   |                                                  ^^^^
   |
   = help: items from traits can only be used if the trait is in scope
help: the following traits which provide `next` are implemented but not in scope; perhaps you want to import one of them
   |
 1 + use futures_lite::stream::StreamExt;
   |
 1 + use futures_util::stream::stream::StreamExt;
   |
 1 + use ordered_stream::adapters::OrderedStreamExt;
   |
help: there is a method `try_next` with a similar name
   |
97 |             Some(signal) = disconnected_stream.try_next() => {
   |                                                ++++

error[E0282]: type annotations needed
  --> gcontinuity-gtk/src/dbus/mod.rs:89:54
   |
89 | ...ssage::Message = signal.into();
   |                     ^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> gcontinuity-gtk/src/dbus/mod.rs:98:54
   |
98 | ...ssage::Message = signal.into();
   |                     ^^^^^^ cannot infer type

error[E0277]: `Rc<RefCell<ui::window::WindowHandle>>` cannot be sent between threads safely
  --> gcontinuity-gtk/src/app.rs:57:9
   |
55 |       start_dbus_listener(
   |       ------------------- required by a bound introduced by this call
56 |           // on_connected — `device_json` is a plai...
57 |           move |device_json: String| {
   |           ^-------------------------
   |           |
   |  _________within this `{closure@app.rs:57:9}`
   | |
58 | |             let h = Rc::clone(&handle_connected);
59 | |             ctx_connected.invoke_local(move || {
60 | |                 if let Ok(handle) = h.try_borrow() {
...  |
63 | |             });
64 | |         },
   | |_________^ `Rc<RefCell<ui::window::WindowHandle>>` cannot be sent between threads safely
   |
   = help: within `{closure@app.rs:57:9}`, the trait `std::marker::Send` is not implemented for `Rc<RefCell<ui::window::WindowHandle>>`
note: required because it's used within this closure
  --> gcontinuity-gtk/src/app.rs:57:9
   |
57 |         move |device_json: String| {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `start_dbus_listener`
  --> gcontinuity-gtk/src/dbus/mod.rs:52:42
   |
51 | pub fn start_dbus_listener(
   |        ------------------- required by a bound in this function
52 |     on_connected_json: impl Fn(String) + Send + 'static,
   |                                          ^^^^ required by this bound in `start_dbus_listener`
   = note: the full name for the type has been written to '/home/smruti/linuxprojects/gcontinuity/target/debug/deps/gcontinuity_settings-f369b80dd6953f32.long-type-8862739789788259279.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `impl Fn(String) + Send + 'static` cannot be shared between threads safely
   --> gcontinuity-gtk/src/dbus/mod.rs:60:24
    |
 60 |       std::thread::spawn(move || {
    |  _____------------------_^
    | |     |
    | |     required by a bound introduced by this call
 61 | |         let rt = tokio::runtime::Builder::new_current_thread()
 62 | |             .enable_all()
 63 | |             .build()
...   |
 71 | |         });
 72 | |     });
    | |_____^ `impl Fn(String) + Send + 'static` cannot be shared between threads safely
    |
    = note: required for `Arc<impl Fn(String) + Send + 'static>` to implement `std::marker::Send`
note: required because it's used within this closure
   --> gcontinuity-gtk/src/dbus/mod.rs:60:24
    |
 60 |     std::thread::spawn(move || {
    |                        ^^^^^^^
note: required by a bound in `std::thread::spawn`
   --> /home/smruti/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/std/src/thread/functions.rs:128:8
    |
125 | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
    |        ----- required by a bound in this function
...
128 |     F: Send + 'static,
    |        ^^^^ required by this bound in `spawn`
help: use parentheses to call this type parameter
    |
 72 |     }(/* std::string::String */));
    |      +++++++++++++++++++++++++++
help: consider restricting opaque type `impl Fn(String) + Send + 'static` with trait `Sync`
    |
 52 |     on_connected_json: impl Fn(String) + Send + 'static + std::marker::Sync,
    |                                                         +++++++++++++++++++

Some errors have detailed explanations: E0277, E0282, E0432, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `gcontinuity-gtk` (bin "gcontinuity-settings") due to 7 previous errors
